--- a/assignmentJava5/src/main/resources/templates/admin/QLSanPham/viewSanPham.html
+++ b/assignmentJava5/src/main/resources/templates/admin/QLSanPham/viewSanPham.html
@@ -45,7 +45,7 @@
                         <th scope="col" th:utext="${itemsp.getGiaNhap()}"></th>
                         <th scope="col" th:utext="${itemsp.getGiaBan()}"></th>
                         <th scope="col" th:utext="${itemsp.getDonGiaKhiGiam()}"></th>
-                        <th scope="col"><a th:href="@{admin/edit-product/{Id}(Id = ${itemsp.getId()})}">Add new</a></th>
+                        <th><a th:href="@{/admin/list-products/delete/{Id}(Id=${itemsp.getId()})}"><i class="fa fa-trash-o" aria-hidden="true"></i></a> </th>
                     </tr>
 
                 </table>
@@ -57,8 +57,11 @@
             <div class="align-content-center">
                 <h3>Them moi hoac chinh sua san pham</h3>
             </div>
+            <div class="text-right">
+                <button class="btn btn-primary" th:onclick="'javascript:clearForm();'">Clear</button>
+            </div>
 
-            <form th:action="@{admin/product/add}" method="post" th:object="${product}">
+            <form th:action="@{add}" method="post" th:object="${product}">
                 <div class="form-group">
                     <label for="tensp">Tên sản phẩm</label>
                     <input type="text" class="form-control" th:field="*{tenSp}" id="tensp"
@@ -78,11 +81,12 @@
 
                     <div class="col-8">
                         <label for="dongspp">Dòng Sản phẩm</label>
-                        <select class="browser-default custom-select" id="dongspp">
+                        <select name="dongsppp" class="browser-default custom-select" id="dongspp">
                             <option th:if="(*{idDongSp} == null)" th:each="option : ${listDongSp}"
-                                    th:value="${option.getTen()}"
-                                    th:text="${option.getTen()}"></option>
-                            <option th:if="(*{idDongSp} != null)" th:each="option : ${listDongSp}" th:value="${option}"
+                                    th:value="${option.getId()}"
+                                    th:text="${option.getTen()}" th:selected="(${option.getId()} ==1)"></option>
+                            <option th:if="(*{idDongSp} != null)" th:each="option : ${listDongSp}"
+                                    th:value="${option.getId()}"
                                     th:text="${option.getTen()}"
                                     th:selected="(${option.getId()} == *{idDongSp.getId()})"></option>
                         </select>
@@ -114,8 +118,8 @@
                 </div>
 
                 <button type="submit" class="btn btn-primary">Save</button>
-                <button class="btn btn-primary" th:onclick="'javascript:clearForm();'">Clear</button>
             </form>
+
         </div>
     </div>
     <script>
@@ -123,8 +127,8 @@
             location.href = "/admin/list-products/" + value;
         }
 
-        function clearForm(){
-            location.href= "/admin/list-products/clear";
+        function clearForm() {
+            location.href = "/admin/list-products";
         }
     </script>
 </div>
