--- a/assignmentJava5/src/main/resources/templates/views/GioHang/list-gioHang.html
+++ b/assignmentJava5/src/main/resources/templates/views/GioHang/list-gioHang.html
@@ -1,33 +1,64 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <title>Gio Hang</title>
-    <style>
-        table, th, td {
-            border: 1px solid;
-
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/style.css">
 </head>
 <body>
 
-<div>
-    <table>
+<div class="container text-center ">
+
+    <table class="table table-striped">
+        <thead>
         <tr>
-            <th>Ten san pham</th>
-            <th>so luong</th>
-            <th>ngay tao</th>
-            <th></th>
+            <th scope="col">ma</th>
+            <th scope="col">Ngay tao</th>
+            <th scope="col">ten san pham</th>
+            <th scope="col">So Luong San Pham </th>
+            <th scope="col">Mo ta san pham </th>
+            <th scope="col">Gia ban san pham </th>
+            <th scope="col">Don gia khi giam san pham </th>
+            <th scope="col">Thanh tien </th>
+            <th scope="col"> </th>
+            <th scope="col"> </th>
         </tr>
-        <tr th:each="item : ${lsgiohang}">
-            <td th:utext="${item.getTenNguoiNhan()}"></td>
-            <td th:utext="${item.getSoLuongSp()}"></td>
+        </thead>
+        <tbody>
+        <tr th:each="item,inter : ${gioHangList}">
+            <th scope="row" th:utext="${item.getMa()}"></th>
             <td th:utext="${item.getNgayTao()}"></td>
-            <!--                <td><a th:href="@{{Idremove}(Idremove = ${item.getId()})}" />remove</td>-->
+            <td th:utext="${chiTietSpList.get(inter.index).getTenSp()}"></td>
+            <td th:utext="${item.getSoLuongSp()}"></td>
+            <td th:utext="${chiTietSpList.get(inter.index).getMoTa()}"></td>
+            <td th:utext="${chiTietSpList.get(inter.index).getGiaBan()}"></td>
+            <td th:utext="${chiTietSpList.get(inter.index).getDonGiaKhiGiam()}"></td>
+            <td th:utext="${item.getSoLuongSp()* chiTietSpList.get(inter.index).getDonGiaKhiGiam()}"></td>
+            <td>
+                <a th:href="@{/list-giohang/add/{Id}(Id = ${chiTietSpList.get(inter.index).getId()})}"> <b>+</b> </a>
+                <a th:href="@{/list-giohang/decrease/{Id}(Id = ${chiTietSpList.get(inter.index).getId()})}"> <b>-</b> </a>
+            </td>
+
+            <td><a th:href="@{'/list-giohang/delete/'+${chiTietSpList.get(inter.index).getId()}}">remove</a></td>
         </tr>
 
+        </tbody>
     </table>
+
 </div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 </html>
